stone changes

stone-1.4.8(pending)
-----------------------------------------------------
[beecp]
1: Change time read methods in pool
2: Provide connection alive validator interface for customization
[beeop]
1: Support generic type
2: Add a method to handle to get pooled object
3: Change time read methods in pool

Changes in 1.4.7
[beecp]
1: add interruption double check on borrower thread
2: throw exceptions when check fail in configuration set methods
3: change message of check exceptions
[beeop]
1: add interruption double check on borrower thread
2: throw exceptions when check fail in configuration set methods
3: change message of check exceptions

Changes in 1.4.6
[beecp]
1: remove two monitoring methods[getConnectionCreatingCount(),getConnectionCreatingTimeoutCount()]
2: change name of a configuration item[forceCloseUsingOnClear --> forceRecycleBorrowedOnClose]
3: change a method name of MonitorVo[getUsingSize() --> getBorrowedSize()]
[beeop]
1: remove two monitoring methods[getObjectCreatingCount(),getObjectCreatingTimeoutCount()]
2: add a method to query print state of runtime logs[isPrintRuntimeLog(key)]
3: add two key methods[Object[] keys(),boolean exists(key)]
4: add two key methods[clear(boolean),clear(boolean,BeeObjectSourceConfig)]
5: change name of configuration items[forceCloseUsingOnClear --> forceRecycleBorrowedOnClose,maxObjectKeySize->maxKeySize]
6: change a method name of MonitorVo[getUsingSize() --> getBorrowedSize()]

Changes in 1.4.5
support array properties injection in util 
[beecp]
1: remove some keywords
[beeop]
1: remove some keywords



Changes in 1.4.4
[beecp]
1: fix null point exception when idle timeout scan
[beeop]
1: fix null point exception when idle timeout scan

Changes in 1.4.3
[beecp]
1: rename a configuration item(delayTimeForNextClear --> parkTimeForRetry)
2: use try-with-resources on configuration file load
3: remove some unnecessary exception catch
4: improve structure of source code
[beeop]