@@ -5,6 +5,7 @@ stone-1.4.8(pending)
 [beecp]
 1: Change time read methods in pool
 2: Provide connection alive validator interface for customization
+3: Support inputted username to get a connection or get XA connection
 [beeop]
 1: Support generic type
 2: Add a method to handle to get pooled object
